cmake_minimum_required(VERSION 3.24)
project(untitled2)

set(CMAKE_CXX_STANDARD 17)

add_executable(untitled2 "Source Files/main.cpp" "Source Files/Person.cpp" "Header Files/Person.h" "Source Files/Florist.cpp" "Header Files/Florist.h" "Source Files/Wholesaler.cpp" "Header Files/Wholesaler.h" "Source Files/Grower.cpp" "Header Files/Grower.h" "Source Files/Gardener.cpp" "Header Files/Gardener.h" "Source Files/FlowerArranger.cpp" "Header Files/FlowerArranger.h" "Source Files/DeliveryPerson.cpp" "Header Files/DeliveryPerson.h" "Source Files/FlowersBouquet.cpp" "Header Files/FlowersBouquet.h")
